# learning-repo

./: .gitignore  AI_ATS_Interactive_Interview_Full_Proposal.md
LLM-fundamentals/exercise/: brochure_solution.ipynb  chat_with_ollama.ipynb  conversational-chatbot.ipynb  gradio-demo.ipynb
agentic-ai-fundamentals/: main.py  pyproject.toml
ai-fundamentals/: README.md
ai-fundamentals/modules/: 01-big-picture-architecture.md  02-inference-vs-training.md  03-weights-quantization.md  04-vector-embeddings-theory.md  05-generating-embeddings-python.md  06-vector-databases-pgvector.md  07-indexing-hnsw-ivfflat.md  08-final-capstone-resume-engine.md
clean-architecture/: README.md  pom.xml
ddd-java-spring/: README.md
ddd-java-spring/modules/: 01-introduction-strategic-design.md  (+10 more)
design-pattern/: README.md
distributed-transactions/: README.md
fastapi-uvicorn-essentials/: README.md
graphql-mastery/: README.md
grpc-mastery/: README.md
jap-learning/: pom.xml
java-websockets/: README.md
jvm-performance-engineering/: README.md
local-llm-structured-inference/: README.md
mongodb-mastery/: README.md
owasp-security-spring/: README.md
postgresql-query-optimize/: docker-compose.yaml
prometheus-grafana-stack/: README.md  alertmanager-guide.yaml  alerts-guide.yaml  docker-compose.yaml  prometheus.yml  web.yaml
python-file-io-essentials/: README.md
redis-mastery/: README.md
speech-to-text-whisper/: README.md
spring-grpc-mastery/: README.md
spring-mongodb-mastery/: README.md
terraform-fundamentals/: .gitignore
tts-avatar-synthesis/: README.md
(+446 files in other folders)
