[project]
name = "agentic-ai-fundamentals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "google-genai>=1.75.0",
    "google-generativeai>=0.8.6",
    "isort>=8.0.1",
    "langchain>=1.2.17",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "python-dotenv>=1.2.2",
]
